anadido la conexion de BD a la carcasa del proyecto

--- a/Documentacion/Grupo2-Proyecto2/src/main/resources/application.properties
+++ b/Documentacion/Grupo2-Proyecto2/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.mvc.static-path-pattern=/resources/**
 logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 
 # ===============================
-# = DATA SOURCE (CAMBIAR!!!!!!!!)
+# = DATA SOURCE
 # ===============================
-spring.datasource.url= jdbc:mysql://localhost:3306/employees?autoReconnect=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://10.90.36.105:3306/proyecto2g2bd?autoReconnect=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username= root
 spring.datasource.password= root
 
