--- a/Grupo2-Proyecto2/src/main/resources/application.properties
+++ b/Grupo2-Proyecto2/src/main/resources/application.properties
@@ -43,3 +43,9 @@ spring.jpa.properties.hibernate.format_sql = true
 logging.level.org.hibernate.SQL= DEBUG
 logging.level.org.springframework.web= INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder= DEBUG 
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+# ===============================
+# = PATH
+# ===============================
+server.servlet.context-path=/user-portal
